examples/chase/parser.y
%{
#include <stdio.h>
#include <stdarg.h>

/* some internal files generated by bison */
int yylex();
void yyerror(const char *s,...);
%}


%union	{
    int count;
}

%token DOG CAT BEAR DOGCATCHER NEWLINE
%type <count> cat cats opt_dog opt_dogcatcher opt_bear 


%%
input	: lines
  	;

lines	: line 
	| line lines
	;

line	: chase NEWLINE
	| error NEWLINE
	;

chase	: cats opt_dog opt_bear opt_dogcatcher
		{ int i;
		    for (i=0; i < $1; ++i)
				printf("Meow ");
		    for (i=0; i < $2; ++i)
				printf("WOOF!! ");
		    for (i=0; i < $3; ++i)
				printf("Grrrrr!!! ");
		    for (i=0; i < $4; ++i)
				printf("You're all going to the dogpound!!!! ");
		    printf("\n");
		}
	;

cats	: cat cats
		{ $$ = $2 + $1; }
	| cat
	;

cat	: CAT
		{ $$ = 1; }
	;

opt_dog	: DOG
		{ $$ = 1; }
	|
		{ $$ = 0; }
	;

opt_dogcatcher	: DOGCATCHER
		{ $$ = 1; }
	|
		{ $$ = 0; }
	;

opt_bear: BEAR
		{ $$ = 1; }
	|
		{ $$ = 0; }
	;
%%

void yyerror(const char *s,...)
{
	printf("parser: Illegal chase\n");

}
