examples/chase/parser.output
Grammar

    0 $accept: input $end

    1 input: lines

    2 lines: line
    3      | line lines

    4 line: chase NEWLINE
    5     | error NEWLINE

    6 chase: cats opt_dog opt_bear opt_dogcatcher

    7 cats: cat cats
    8     | cat

    9 cat: CAT

   10 opt_dog: DOG
   11        | ε

   12 opt_dogcatcher: DOGCATCHER
   13               | ε

   14 opt_bear: BEAR
   15         | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5
    DOG (258) 10
    CAT (259) 9
    BEAR (260) 14
    DOGCATCHER (261) 12
    NEWLINE (262) 4 5


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    input (9)
        on left: 1
        on right: 0
    lines (10)
        on left: 2 3
        on right: 1 3
    line (11)
        on left: 4 5
        on right: 2 3
    chase (12)
        on left: 6
        on right: 4
    cats <count> (13)
        on left: 7 8
        on right: 6 7
    cat <count> (14)
        on left: 9
        on right: 7 8
    opt_dog <count> (15)
        on left: 10 11
        on right: 6
    opt_dogcatcher <count> (16)
        on left: 12 13
        on right: 6
    opt_bear <count> (17)
        on left: 14 15
        on right: 6


State 0

    0 $accept: • input $end

    error  shift, and go to state 1
    CAT    shift, and go to state 2

    input  go to state 3
    lines  go to state 4
    line   go to state 5
    chase  go to state 6
    cats   go to state 7
    cat    go to state 8


State 1

    5 line: error • NEWLINE

    NEWLINE  shift, and go to state 9


State 2

    9 cat: CAT •

    $default  reduce using rule 9 (cat)


State 3

    0 $accept: input • $end

    $end  shift, and go to state 10


State 4

    1 input: lines •

    $default  reduce using rule 1 (input)


State 5

    2 lines: line •
    3      | line • lines

    error  shift, and go to state 1
    CAT    shift, and go to state 2

    $end  reduce using rule 2 (lines)

    lines  go to state 11
    line   go to state 5
    chase  go to state 6
    cats   go to state 7
    cat    go to state 8


State 6

    4 line: chase • NEWLINE

    NEWLINE  shift, and go to state 12


State 7

    6 chase: cats • opt_dog opt_bear opt_dogcatcher

    DOG  shift, and go to state 13

    $default  reduce using rule 11 (opt_dog)

    opt_dog  go to state 14


State 8

    7 cats: cat • cats
    8     | cat •

    CAT  shift, and go to state 2

    $default  reduce using rule 8 (cats)

    cats  go to state 15
    cat   go to state 8


State 9

    5 line: error NEWLINE •

    $default  reduce using rule 5 (line)


State 10

    0 $accept: input $end •

    $default  accept


State 11

    3 lines: line lines •

    $default  reduce using rule 3 (lines)


State 12

    4 line: chase NEWLINE •

    $default  reduce using rule 4 (line)


State 13

   10 opt_dog: DOG •

    $default  reduce using rule 10 (opt_dog)


State 14

    6 chase: cats opt_dog • opt_bear opt_dogcatcher

    BEAR  shift, and go to state 16

    $default  reduce using rule 15 (opt_bear)

    opt_bear  go to state 17


State 15

    7 cats: cat cats •

    $default  reduce using rule 7 (cats)


State 16

   14 opt_bear: BEAR •

    $default  reduce using rule 14 (opt_bear)


State 17

    6 chase: cats opt_dog opt_bear • opt_dogcatcher

    DOGCATCHER  shift, and go to state 18

    $default  reduce using rule 13 (opt_dogcatcher)

    opt_dogcatcher  go to state 19


State 18

   12 opt_dogcatcher: DOGCATCHER •

    $default  reduce using rule 12 (opt_dogcatcher)


State 19

    6 chase: cats opt_dog opt_bear opt_dogcatcher •

    $default  reduce using rule 6 (chase)
